# PenguinEngine

./: .gitignore  CMakeLists.txt  build-linux.sh
engine/: CMakeLists.txt
engine/src/: pch.h
engine/src/core/: applcation.h  application.cpp  entry.h
game/: CMakeLists.txt
game/src/: game.cpp
